--- a/app/src/main/res/layout/layout_investment_history_list.xml
+++ b/app/src/main/res/layout/layout_investment_history_list.xml
@@ -10,8 +10,7 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/_5sdp"
-        >
+       >
 
 
         <com.app.l_pesa.common.CommonTextRegular
@@ -32,8 +31,8 @@
             android:id="@+id/view"
             android:layout_width="match_parent"
             android:layout_height="@dimen/_1sdp"
-            android:layout_marginTop="@dimen/_5sdp"
             android:layout_marginStart="@dimen/_5sdp"
+            android:layout_marginTop="@dimen/_5sdp"
             android:layout_marginEnd="@dimen/_5sdp"
             android:background="@color/divider_color"
             app:layout_constraintEnd_toEndOf="parent"
@@ -43,11 +42,11 @@
 
         <ImageView
             android:id="@+id/imageView2"
-            android:contentDescription="@string/app_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_3sdp"
             android:layout_marginTop="@dimen/_5sdp"
+            android:contentDescription="@string/app_name"
             app:layout_constraintBottom_toTopOf="@+id/imageView3"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/view"
@@ -60,28 +59,28 @@
             android:layout_marginStart="@dimen/_2sdp"
             android:layout_marginEnd="@dimen/_2sdp"
             android:fontFamily="@font/montserrat"
-            android:textColor="@color/dark_text_color"
-            android:textSize="@dimen/_10sdp"
             android:gravity="start|center"
             android:text=""
-            app:layout_constraintEnd_toStartOf="@id/view4"
+            android:textColor="@color/dark_text_color"
+            android:textSize="@dimen/_10sdp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView2"
-            app:layout_constraintStart_toEndOf="@+id/imageView2"
             app:layout_constraintBottom_toTopOf="@+id/imageView3"
+            app:layout_constraintEnd_toStartOf="@id/view4"
+            app:layout_constraintStart_toEndOf="@+id/imageView2"
             app:layout_constraintTop_toTopOf="@+id/imageView2" />
 
 
         <ImageView
             android:id="@+id/imageView3"
-            android:contentDescription="@string/app_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_3sdp"
             android:layout_marginTop="@dimen/_2sdp"
+            android:contentDescription="@string/app_name"
             app:layout_constraintBottom_toTopOf="@+id/imageView4"
+            app:layout_constraintEnd_toStartOf="@id/txtDuration"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView2"
-            app:layout_constraintEnd_toStartOf="@id/txtDuration"
             app:srcCompat="@drawable/ic_calendar_icon" />
 
         <com.app.l_pesa.common.CommonTextRegular
@@ -91,12 +90,12 @@
             android:layout_marginStart="@dimen/_2sdp"
             android:layout_marginEnd="@dimen/_2sdp"
             android:fontFamily="@font/montserrat"
-            android:textColor="@color/textColors"
-            android:textSize="@dimen/_10sdp"
             android:gravity="start|center"
             android:text=""
-            app:layout_constraintEnd_toStartOf="@id/view4"
+            android:textColor="@color/textColors"
+            android:textSize="@dimen/_10sdp"
             app:layout_constraintBottom_toBottomOf="@+id/imageView3"
+            app:layout_constraintEnd_toStartOf="@id/view4"
             app:layout_constraintStart_toEndOf="@+id/imageView3"
             app:layout_constraintTop_toBottomOf="@+id/txtAmount"
             app:layout_constraintTop_toTopOf="@+id/imageView3" />
@@ -109,9 +108,9 @@
             android:layout_marginBottom="@dimen/_5sdp"
             android:contentDescription="@string/app_name"
             app:layout_constraintBottom_toTopOf="@id/txtDetails"
+            app:layout_constraintEnd_toStartOf="@id/txtRate"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView3"
-            app:layout_constraintEnd_toStartOf="@id/txtRate"
             app:srcCompat="@drawable/ic_current_credit_score" />
 
         <com.app.l_pesa.common.CommonTextRegular
@@ -124,10 +123,10 @@
             android:gravity="start|center"
             android:textColor="@color/textColors"
             android:textSize="@dimen/_10sdp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView4"
             app:layout_constraintBottom_toBottomOf="@+id/imageView4"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintEnd_toStartOf="@id/view4"
+            app:layout_constraintStart_toEndOf="@+id/imageView4"
             app:layout_constraintTop_toTopOf="@+id/imageView4" />
 
         <View
@@ -135,9 +134,9 @@
             android:layout_width="@dimen/_1sdp"
             android:layout_height="0dp"
             android:layout_marginTop="@dimen/_5sdp"
+            android:layout_marginEnd="@dimen/_15sdp"
             android:layout_marginBottom="@dimen/_5sdp"
             android:background="@color/divider_color"
-            android:layout_marginEnd="@dimen/_15sdp"
             app:layout_constraintBottom_toTopOf="@+id/txtDetails"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -148,13 +147,14 @@
             android:id="@+id/imageView5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:contentDescription="@string/app_name"
             android:layout_marginStart="@dimen/_5sdp"
-            android:layout_marginTop="@dimen/_5sdp"
+            android:contentDescription="@string/app_name"
+            android:layout_marginTop="@dimen/_3sdp"
             app:layout_constraintBottom_toTopOf="@+id/imageView6"
+            app:layout_constraintEnd_toStartOf="@id/txtInterest"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@id/view4"
             app:layout_constraintTop_toBottomOf="@+id/view"
-            app:layout_constraintEnd_toStartOf="@id/txtInterest"
             app:srcCompat="@drawable/ic_ref_no" />
 
 
@@ -164,15 +164,14 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_2sdp"
             android:fontFamily="@font/montserrat"
+            android:gravity="start|center"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
             android:textColor="@color/textColors"
             android:textSize="@dimen/_10sdp"
-            android:gravity="start|center"
-            app:layout_constraintTop_toTopOf="@+id/imageView5"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView5"
-            app:layout_constraintStart_toEndOf="@+id/imageView5"
             app:layout_constraintEnd_toEndOf="parent"
-
-            />
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/imageView5"
+            app:layout_constraintTop_toTopOf="@+id/imageView5" />
 
         <ImageView
             android:id="@+id/imageView6"
@@ -180,11 +179,12 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_5sdp"
             android:contentDescription="@string/app_name"
-            android:layout_marginTop="@dimen/_2sdp"
-            app:layout_constraintStart_toEndOf="@id/view4"
+            android:layout_marginTop="@dimen/_3sdp"
             app:layout_constraintBottom_toTopOf="@+id/imageView7"
-            app:layout_constraintTop_toBottomOf="@+id/imageView5"
             app:layout_constraintEnd_toStartOf="@id/txtMaturity"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@id/view4"
+            app:layout_constraintTop_toBottomOf="@+id/imageView5"
             app:srcCompat="@drawable/ic_calendar_icon" />
 
         <com.app.l_pesa.common.CommonTextRegular
@@ -194,11 +194,12 @@
             android:layout_marginStart="@dimen/_1sdp"
             android:fontFamily="@font/montserrat"
             android:gravity="start|center"
+            android:text=""
             android:textColor="@color/textColors"
             android:textSize="@dimen/_10sdp"
-            android:text=""
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="@+id/imageView6"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/imageView6"
             app:layout_constraintTop_toTopOf="@+id/imageView6" />
 
@@ -209,12 +210,12 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_5sdp"
             android:contentDescription="@string/app_name"
-            android:layout_marginTop="@dimen/_2sdp"
-            android:layout_marginBottom="@dimen/_5sdp"
-            app:layout_constraintBottom_toTopOf="@id/txtDetails"
-            app:layout_constraintTop_toBottomOf="@id/imageView6"
-            app:layout_constraintStart_toEndOf="@+id/view4"
+            android:layout_marginTop="@dimen/_3sdp"
+            app:layout_constraintBottom_toTopOf="@+id/txtDetails"
             app:layout_constraintEnd_toStartOf="@+id/txtWithdrawalStatus"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/view4"
+            app:layout_constraintTop_toBottomOf="@+id/imageView6"
             app:srcCompat="@drawable/ic_calendar_icon" />
 
         <com.app.l_pesa.common.CommonTextRegular
@@ -226,25 +227,26 @@
             android:gravity="start|center"
             android:textColor="@color/textColors"
             android:textSize="@dimen/_10sdp"
+            app:layout_constraintBottom_toTopOf="@+id/txtDetails"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView7"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/imageView7"
             app:layout_constraintTop_toTopOf="@+id/imageView7" />
 
 
-
-       <com.app.l_pesa.common.CommonTextRegular
+        <com.app.l_pesa.common.CommonTextRegular
             android:id="@+id/txtAppliedDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="@dimen/_11sdp"
             android:layout_marginStart="@dimen/_10sdp"
             android:drawableStart="@drawable/ic_calendar_icon"
             android:drawablePadding="@dimen/_2sdp"
             android:gravity="center|start"
             android:textColor="@color/textColors"
-            app:layout_constraintBottom_toTopOf="@+id/view"
+            android:textSize="@dimen/_11sdp"
+            app:layout_constraintBottom_toBottomOf="@+id/view"
             app:layout_constraintEnd_toStartOf="@+id/imgEdit"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/txtRef"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -253,7 +255,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_3sdp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginEnd="@dimen/_3sdp"
             android:layout_marginBottom="@dimen/_3sdp"
             android:background="?attr/selectableItemBackground"
             android:contentDescription="@string/app_name"
@@ -263,20 +265,20 @@
             app:srcCompat="@drawable/ic_edit_icon" />
 
 
-
-       <com.app.l_pesa.common.CommonTextRegular
+        <com.app.l_pesa.common.CommonTextRegular
             android:id="@+id/txtDetails"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/montserrat"
-            android:textSize="@dimen/_12sdp"
-            android:padding="@dimen/_5sdp"
             android:background="#f2f2f2"
+            android:fontFamily="@font/montserrat"
             android:gravity="center|start"
-            app:layout_constraintTop_toBottomOf="@+id/imageView7"
-            app:layout_constraintStart_toStartOf="parent"
+            android:padding="@dimen/_5sdp"
+            android:textSize="@dimen/_12sdp"
+            android:textColor="@color/dark_text_color"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView7" />
 
 
     </android.support.constraint.ConstraintLayout>
