--- a/app/src/main/res/layout/layout_list_dashboard_loan.xml
+++ b/app/src/main/res/layout/layout_list_dashboard_loan.xml
@@ -200,9 +200,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat"
-                android:textColor="@color/dark_text_color"
-                android:textSize="@dimen/_10sdp"
-                android:layout_marginStart="@dimen/_5sdp"
+                android:textColor="@color/color_gray_text"
+                android:textSize="@dimen/_12sdp"
+                android:layout_marginStart="@dimen/_14sdp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/seekBarLayout"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -214,9 +214,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat"
-                android:textColor="@color/dark_text_color"
-                android:textSize="@dimen/_10sdp"
-                android:layout_marginEnd="@dimen/_5sdp"
+                android:textColor="@color/color_gray_text"
+                android:textSize="@dimen/_12sdp"
+                android:layout_marginEnd="@dimen/_14sdp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/seekBarLayout"
                 app:layout_constraintBottom_toBottomOf="parent"
