--- a/app/src/main/res/layout/snackbar_error.xml
+++ b/app/src/main/res/layout/snackbar_error.xml
@@ -13,7 +13,7 @@
         android:contentDescription="@string/app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_error"
+        android:src="@drawable/ic_error_yellow"
         android:layout_marginStart="@dimen/_3sdp"
 
         />
