--- a/app/src/main/res/layout/layout_withdrawal_history.xml
+++ b/app/src/main/res/layout/layout_withdrawal_history.xml
@@ -81,7 +81,7 @@
                 android:textSize="@dimen/_10sdp"
                 android:textColor="@color/dark_text_color"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/view46"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/txtStatus" />
 
