--- a/app/src/main/res/layout/layout_list_wallet_history.xml
+++ b/app/src/main/res/layout/layout_list_wallet_history.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
@@ -8,7 +9,7 @@
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/_4sdp">
+        android:layout_margin="@dimen/_3sdp">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -17,7 +18,7 @@
 
 
             <ImageView
-                android:id="@+id/imageView36"
+                android:id="@+id/imageStatus"
                 android:contentDescription="@string/app_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -37,7 +38,7 @@
                 android:textColor="@color/light_text_color"
                 android:textSize="@dimen/_10sdp"
                 app:layout_constraintBottom_toTopOf="@+id/txtRef"
-                app:layout_constraintStart_toEndOf="@+id/imageView36"
+                app:layout_constraintStart_toEndOf="@+id/imageStatus"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_chainStyle="spread_inside" />
 
@@ -51,7 +52,7 @@
                 android:textColor="@color/dark_text_color"
                 android:layout_marginBottom="@dimen/_5sdp"
                 app:layout_constraintBottom_toTopOf="@+id/txtCreateDate"
-                app:layout_constraintStart_toEndOf="@+id/imageView36"
+                app:layout_constraintStart_toEndOf="@+id/imageStatus"
                 app:layout_constraintTop_toBottomOf="@+id/textView15" />
 
             <com.app.l_pesa.common.CommonTextRegular
@@ -65,16 +66,32 @@
                 android:drawableStart="@drawable/ic_calendar_icon"
                 android:drawablePadding="@dimen/_5sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/imageView36"
+                app:layout_constraintStart_toEndOf="@+id/imageStatus"
                 app:layout_constraintTop_toBottomOf="@+id/txtRef" />
 
+
             <com.app.l_pesa.common.CommonTextRegular
-                android:id="@+id/textView20"
+                android:id="@+id/txtAmount"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="@dimen/_14sdp"
+                android:fontFamily="@font/montserrat"
                 android:textStyle="bold"
                 android:gravity="start|center"
+                android:textSize="@dimen/_12sdp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/txtAmountStatus"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <com.app.l_pesa.common.CommonTextRegular
+                android:id="@+id/txtAmountStatus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/montserrat"
+                android:textStyle="bold"
+                android:gravity="start|center"
+                android:textSize="@dimen/_10sdp"
+                android:paddingStart="@dimen/_4sdp"
+                android:paddingEnd="@dimen/_1sdp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
