--- a/app/src/main/res/layout/fragment_token_withdrawal.xml
+++ b/app/src/main/res/layout/fragment_token_withdrawal.xml
@@ -28,7 +28,7 @@
                 android:layout_height="@dimen/_60sdp"
                 android:layout_marginTop="@dimen/_15sdp"
                 android:contentDescription="@string/app_name"
-                app:layout_constraintBottom_toTopOf="@+id/textView32"
+                app:layout_constraintBottom_toTopOf="@+id/txtLPK"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -37,28 +37,26 @@
                 app:srcCompat="@drawable/lpk_round_logo" />
 
             <com.app.l_pesa.common.CommonTextRegular
-                android:id="@+id/textView32"
+                android:id="@+id/txtLPK"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_5sdp"
                 android:fontFamily="@font/montserrat"
-                android:text="613715 LPK"
                 android:textAlignment="center"
                 android:textColor="@color/total_lpk_color"
                 android:textSize="@dimen/_18sdp"
-                app:layout_constraintBottom_toTopOf="@+id/textView33"
+                app:layout_constraintBottom_toTopOf="@+id/txtLockedVal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/imageView31" />
 
             <com.app.l_pesa.common.CommonTextRegular
-                android:id="@+id/textView33"
+                android:id="@+id/txtLockedVal"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/_1sdp"
                 android:fontFamily="@font/montserrat"
-                android:text="905 LPK is in Deposit"
                 android:textAlignment="center"
                 android:textColor="@color/colorSemiBlack"
                 android:textSize="@dimen/_12sdp"
@@ -66,7 +64,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView32" />
+                app:layout_constraintTop_toBottomOf="@+id/txtLPK" />
 
             <com.app.l_pesa.common.CommonInputLayout
                 android:id="@+id/commonInputLayout3"
@@ -77,7 +75,7 @@
                 android:layout_marginTop="@dimen/_20sdp"
                 android:layout_marginRight="@dimen/_15sdp"
                 app:layout_constraintBottom_toTopOf="@+id/textView34"
-                app:layout_constraintTop_toBottomOf="@+id/textView33">
+                app:layout_constraintTop_toBottomOf="@+id/txtLockedVal">
 
                 <com.app.l_pesa.common.CommonEditTextRegular
                     android:id="@+id/etToken"
