--- a/app/src/main/res/layout/layout_list_dashboard_loan.xml
+++ b/app/src/main/res/layout/layout_list_dashboard_loan.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_marginTop="@dimen/_5sdp"
+    android:layout_marginTop="@dimen/_3sdp"
     android:background="@color/colorWhite"
     >
 
@@ -68,13 +68,14 @@
                 android:background="@color/divider_color"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/constraintRight"
+                app:layout_constraintBottom_toTopOf="@id/viewDividerTwo"
                 app:layout_constraintStart_toEndOf="@+id/txt_loan_type"
                 app:layout_constraintTop_toTopOf="parent" />
 
 
             <android.support.constraint.ConstraintLayout
                 android:id="@+id/constraintRight"
-                android:layout_width="wrap_content"
+                android:layout_width="@dimen/_125sdp"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toEndOf="@+id/viewDividerOne"
                 app:layout_constraintBottom_toTopOf="@id/viewDividerTwo"
@@ -84,10 +85,11 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:layout_constraintTop_toTopOf="parent"
+                    android:orientation="vertical"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:orientation="vertical"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
 
                     >
 
@@ -95,11 +97,11 @@
                         android:id="@+id/txtAmountFirst"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_1sdp"
+                        android:layout_marginTop="@dimen/_2sdp"
                         android:fontFamily="@font/montserrat"
-                        android:textColor="@color/textColors"
-                        android:text="@string/app_name"
                         android:gravity="center"
+                        android:text="@string/app_name"
+                        android:textColor="@color/textColors"
                         android:textSize="@dimen/_11sdp"
 
                         />
@@ -108,11 +110,11 @@
                         android:id="@+id/txtAmountSecond"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="@dimen/_1sdp"
+                        android:layout_marginTop="@dimen/_2sdp"
                         android:fontFamily="@font/montserrat"
-                        android:textColor="@color/textColors"
-                        android:text="@string/app_name"
                         android:gravity="center"
+                        android:text="@string/app_name"
+                        android:textColor="@color/textColors"
                         android:textSize="@dimen/_11sdp"
 
                         />
@@ -121,15 +123,16 @@
                         android:id="@+id/btn_apply_loan"
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/_27sdp"
-                        android:layout_marginEnd="@dimen/_2sdp"
                         android:layout_marginStart="@dimen/_2sdp"
+                        android:layout_marginTop="@dimen/_2sdp"
+                        android:layout_marginEnd="@dimen/_2sdp"
                         android:fontFamily="@font/montserrat"
+                        android:gravity="center"
+                        android:layout_gravity="center"
+                        android:text="@string/repayments"
                         android:textAllCaps="false"
                         android:textColor="@color/colorWhite"
-                        android:text="@string/repayments"
-                        android:gravity="center"
-                        android:textSize="@dimen/_9sdp"
-                        />
+                        android:textSize="@dimen/_9sdp" />
 
                 </LinearLayout>
 
