--- a/app/src/main/res/layout/fragment_token_transfer.xml
+++ b/app/src/main/res/layout/fragment_token_transfer.xml
@@ -36,42 +36,40 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_10sdp"
-                    app:layout_constraintBottom_toTopOf="@+id/textView22"
+                    app:layout_constraintBottom_toTopOf="@+id/txtLPK"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
                     app:srcCompat="@drawable/lpk_round_logo" />
 
                 <com.app.l_pesa.common.CommonTextRegular
-                    android:id="@+id/textView22"
+                    android:id="@+id/txtLPK"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_5sdp"
                     android:fontFamily="@font/montserrat"
-                    android:text="613715 LPK"
                     android:textStyle="bold"
                     android:textAlignment="center"
                     android:textColor="@color/total_lpk_color"
                     android:textSize="@dimen/_18sdp"
-                    app:layout_constraintBottom_toTopOf="@+id/textView23"
+                    app:layout_constraintBottom_toTopOf="@+id/txtLockedVal"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageView11" />
 
                 <com.app.l_pesa.common.CommonTextRegular
-                    android:id="@+id/textView23"
+                    android:id="@+id/txtLockedVal"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_1sdp"
                     android:fontFamily="@font/montserrat"
-                    android:text="905 LPK is in Deposit"
                     android:textAlignment="center"
                     android:textColor="@color/colorSemiBlack"
                     android:textSize="@dimen/_12sdp"
                     app:layout_constraintBottom_toTopOf="@+id/commonInputLayout6"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView22" />
+                    app:layout_constraintTop_toBottomOf="@+id/txtLPK" />
 
                 <com.app.l_pesa.common.CommonInputLayout
                     android:id="@+id/commonInputLayout6"
@@ -84,7 +82,7 @@
                     app:layout_constraintBottom_toTopOf="@+id/buttonTransfer"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView23">
+                    app:layout_constraintTop_toBottomOf="@+id/txtLockedVal">
 
                     <com.app.l_pesa.common.CommonEditTextRegular
                         android:id="@+id/etToken"
@@ -153,14 +151,13 @@
                     app:layout_constraintTop_toTopOf="@+id/imageView33" />
 
                 <TextView
-                    android:id="@+id/textView25"
+                    android:id="@+id/txtSavings"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="@dimen/_10sdp"
                     android:fontFamily="@font/montserrat"
                     android:textSize="@dimen/_9sdp"
                     android:textColor="@color/colorSemiBlack"
-                    android:text="@string/token_transfer_text"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
