--- a/app/src/main/res/layout/layout_marital.xml
+++ b/app/src/main/res/layout/layout_marital.xml
@@ -3,24 +3,29 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/rlRoot"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/_45sdp"
+    android:layout_height="wrap_content"
     android:gravity="center|start"
     >
 
     <RelativeLayout
         android:id="@+id/rlData"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_44sdp"
+        android:layout_height="wrap_content"
 
         >
 
         <com.app.l_pesa.common.CommonTextRegular
             android:id="@+id/txtTitle"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_5sdp"
+            android:layout_marginTop="@dimen/_2sdp"
+            android:padding="@dimen/_3sdp"
             android:gravity="center|start"
-            android:textSize="@dimen/_13sdp" />
+            android:fontFamily="@font/montserrat"
+            android:textSize="@dimen/_12sdp"
+            android:textColor="@color/textColors"
+            />
 
     </RelativeLayout>
 
@@ -31,6 +36,7 @@
         android:background="@color/colorApp"
         android:layout_marginStart="@dimen/_10sdp"
         android:layout_marginEnd="@dimen/_10sdp"
+        android:layout_marginTop="@dimen/_2sdp"
         />
 </RelativeLayout>
 
