--- a/app/src/main/res/layout/layout_marital.xml
+++ b/app/src/main/res/layout/layout_marital.xml
@@ -20,7 +20,8 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_5sdp"
             android:layout_marginTop="@dimen/_2sdp"
-            android:padding="@dimen/_3sdp"
+            android:paddingTop="@dimen/_3sdp"
+            android:paddingBottom="@dimen/_3sdp"
             android:gravity="center|start"
             android:fontFamily="@font/montserrat"
             android:textSize="@dimen/_12sdp"
