--- a/app/src/main/res/layout/content_loan_plan_details.xml
+++ b/app/src/main/res/layout/content_loan_plan_details.xml
@@ -26,6 +26,7 @@
 
                     <ImageView
                         android:id="@+id/imageView18"
+                        android:contentDescription="@string/app_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_3sdp"
@@ -270,11 +271,12 @@
                         android:id="@+id/imageView38"
                         android:contentDescription="@string/app_name"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
                         android:layout_margin="@dimen/_10sdp"
                         app:layout_constraintBottom_toTopOf="@+id/view35"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="@+id/view33"
+                        app:layout_constraintEnd_toStartOf="@id/txt_currency_conversion_rate"
                         app:srcCompat="@drawable/ic_after_currency_conversion" />
 
                     <com.app.l_pesa.common.CommonTextRegular
@@ -294,12 +296,13 @@
                     <ImageView
                         android:id="@+id/imageView39"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_height="0dp"
                         android:contentDescription="@string/app_name"
                         android:layout_marginStart="@dimen/_7sdp"
                         app:layout_constraintBottom_toTopOf="@+id/view35"
                         app:layout_constraintStart_toEndOf="@+id/txt_currency_conversion_rate"
                         app:layout_constraintTop_toTopOf="@+id/view33"
+                        app:layout_constraintEnd_toStartOf="@id/txt_loan_after_currency_conversion"
                         app:srcCompat="@drawable/ic_after_currency_conversion" />
 
                     <com.app.l_pesa.common.CommonTextRegular
@@ -311,7 +314,7 @@
                         android:gravity="center|start"
                         android:fontFamily="@font/montserrat"
                         android:text="@string/loan_after_currency_conversion"
-                        app:layout_constraintBottom_toBottomOf="@+id/imageView39"
+                        app:layout_constraintBottom_toTopOf="@+id/view35"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/imageView39"
                         app:layout_constraintTop_toTopOf="@+id/imageView39" />
