--- a/app/src/main/res/layout/content_loan_plan_details.xml
+++ b/app/src/main/res/layout/content_loan_plan_details.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:background="@color/screenBackground"
         android:layout_height="match_parent">
@@ -269,22 +270,24 @@
 
                     <ImageView
                         android:id="@+id/imageView38"
-                        android:contentDescription="@string/app_name"
                         android:layout_width="wrap_content"
-                        android:layout_height="0dp"
-                        android:layout_margin="@dimen/_10sdp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/_5sdp"
+                        android:contentDescription="@string/app_name"
+                        app:srcCompat="@drawable/ic_after_currency_conversion"
                         app:layout_constraintBottom_toTopOf="@+id/view35"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="@+id/view33"
-                        app:layout_constraintEnd_toStartOf="@id/txt_currency_conversion_rate"
-                        app:srcCompat="@drawable/ic_after_currency_conversion" />
+                        app:layout_constraintEnd_toStartOf="@+id/txt_currency_conversion_rate"/>
 
                     <com.app.l_pesa.common.CommonTextRegular
                         android:id="@+id/txt_currency_conversion_rate"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:textSize="@dimen/_10sdp"
-                        android:layout_marginStart="@dimen/_5sdp"
+                        android:layout_marginStart="@dimen/_3sdp"
+                        android:layout_marginEnd="@dimen/_2sdp"
+                        android:layout_marginBottom="@dimen/_3sdp"
                         android:gravity="center|start"
                         android:fontFamily="@font/montserrat"
                         android:text="@string/currency_conversion_rate"
@@ -296,21 +299,22 @@
                     <ImageView
                         android:id="@+id/imageView39"
                         android:layout_width="wrap_content"
-                        android:layout_height="0dp"
+                        android:layout_height="wrap_content"
                         android:contentDescription="@string/app_name"
+                        app:srcCompat="@drawable/ic_after_currency_conversion"
                         android:layout_marginStart="@dimen/_7sdp"
                         app:layout_constraintBottom_toTopOf="@+id/view35"
                         app:layout_constraintStart_toEndOf="@+id/txt_currency_conversion_rate"
-                        app:layout_constraintTop_toTopOf="@+id/view33"
-                        app:layout_constraintEnd_toStartOf="@id/txt_loan_after_currency_conversion"
-                        app:srcCompat="@drawable/ic_after_currency_conversion" />
+                        app:layout_constraintTop_toTopOf="@+id/view33" />
 
                     <com.app.l_pesa.common.CommonTextRegular
                         android:id="@+id/txt_loan_after_currency_conversion"
                         android:layout_width="0dp"
                         android:textSize="@dimen/_10sdp"
                         android:layout_height="wrap_content"
-                        android:layout_margin="@dimen/_10sdp"
+                        android:layout_marginStart="@dimen/_3sdp"
+                        android:layout_marginEnd="@dimen/_2sdp"
+                        android:layout_marginBottom="@dimen/_3sdp"
                         android:gravity="center|start"
                         android:fontFamily="@font/montserrat"
                         android:text="@string/loan_after_currency_conversion"
@@ -325,6 +329,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="@dimen/_5sdp"
+                        app:layout_constraintEnd_toStartOf="@+id/txt_conversion_charge"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/view35"
@@ -335,7 +340,9 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:text="@string/conversion_charge"
-                        android:layout_margin="@dimen/_10sdp"
+                        android:layout_marginStart="@dimen/_3sdp"
+                        android:layout_marginEnd="@dimen/_2sdp"
+                        android:layout_marginBottom="@dimen/_3sdp"
                         android:textSize="@dimen/_10sdp"
                         android:fontFamily="@font/montserrat"
                         app:layout_constraintBottom_toBottomOf="@+id/imageView40"
@@ -361,7 +368,9 @@
                         android:text="@string/processing_fee"
                         android:textSize="@dimen/_10sdp"
                         android:fontFamily="@font/montserrat"
-                        android:layout_margin="@dimen/_10sdp"
+                        android:layout_marginStart="@dimen/_3sdp"
+                        android:layout_marginEnd="@dimen/_2sdp"
+                        android:layout_marginBottom="@dimen/_3sdp"
                         app:layout_constraintBottom_toBottomOf="@+id/imageView41"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/imageView41"
